inverter_api/firewall.txt
# Generated by xtables-save v1.8.2 on Tue Jul 20 09:41:43 2021
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:INPUT_direct - [0:0]
:INPUT_ZONES_SOURCE - [0:0]
:INPUT_ZONES - [0:0]
:FORWARD_direct - [0:0]
:FORWARD_IN_ZONES_SOURCE - [0:0]
:FORWARD_IN_ZONES - [0:0]
:FORWARD_OUT_ZONES_SOURCE - [0:0]
:FORWARD_OUT_ZONES - [0:0]
:OUTPUT_direct - [0:0]
:IN_public - [0:0]
:IN_public_log - [0:0]
:IN_public_deny - [0:0]
:IN_public_allow - [0:0]
:FWDO_public - [0:0]
:FWDO_public_log - [0:0]
:FWDO_public_deny - [0:0]
:FWDO_public_allow - [0:0]
:FWDI_public - [0:0]
:FWDI_public_log - [0:0]
:FWDI_public_deny - [0:0]
:FWDI_public_allow - [0:0]
:DOCKER - [0:0]
:DOCKER-ISOLATION-STAGE-1 - [0:0]
:DOCKER-ISOLATION-STAGE-2 - [0:0]
:DOCKER-USER - [0:0]
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -j INPUT_direct
-A INPUT -j INPUT_ZONES_SOURCE
-A INPUT -j INPUT_ZONES
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-ISOLATION-STAGE-1
-A FORWARD -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -o docker0 -j DOCKER
-A FORWARD -i docker0 ! -o docker0 -j ACCEPT
-A FORWARD -i docker0 -o docker0 -j ACCEPT
-A FORWARD -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -i lo -j ACCEPT
-A FORWARD -j FORWARD_direct
-A FORWARD -j FORWARD_IN_ZONES_SOURCE
-A FORWARD -j FORWARD_IN_ZONES
-A FORWARD -j FORWARD_OUT_ZONES_SOURCE
-A FORWARD -j FORWARD_OUT_ZONES
-A FORWARD -m conntrack --ctstate INVALID -j DROP
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -j OUTPUT_direct
-A INPUT_ZONES -g IN_public
-A FORWARD_IN_ZONES -g FWDI_public
-A FORWARD_OUT_ZONES -g FWDO_public
-A IN_public -j IN_public_log
-A IN_public -j IN_public_deny
-A IN_public -j IN_public_allow
-A IN_public -p icmp -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 22 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 443 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 5900:5903 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p udp -m udp --dport 8080 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 53 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p udp -m udp --dport 53 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 5555 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 80 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 3000 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 8080 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p tcp -m tcp --dport 51820 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -p udp -m udp --dport 51820 -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A IN_public_allow -s 140.96.0.0/24 -j ACCEPT
-A IN_public_allow -s 10.6.0.2/32 -j ACCEPT
-A FWDO_public -j FWDO_public_log
-A FWDO_public -j FWDO_public_deny
-A FWDO_public -j FWDO_public_allow
-A FWDO_public_allow -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A FWDO_public_allow -m conntrack --ctstate NEW,UNTRACKED -j ACCEPT
-A FWDI_public -j FWDI_public_log
-A FWDI_public -j FWDI_public_deny
-A FWDI_public -j FWDI_public_allow
-A FWDI_public -p icmp -j ACCEPT
-A DOCKER-ISOLATION-STAGE-1 -i docker0 ! -o docker0 -j DOCKER-ISOLATION-STAGE-2
-A DOCKER-ISOLATION-STAGE-1 -j RETURN
-A DOCKER-ISOLATION-STAGE-2 -o docker0 -j DROP
-A DOCKER-ISOLATION-STAGE-2 -j RETURN
-A DOCKER-USER -j RETURN
-A f2b-sshd -s 99.195.132.125/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.55.183.14/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.184.40.202/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 95.105.46.221/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 94.120.194.245/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.99.34.215/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 92.63.199.9/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -s 91.248.2.140/32 -j REJECT --reject-with icmp-port-unreachable
-A f2b-sshd -j RETURN
COMMIT
# Completed on Tue Jul 20 09:41:43 2021
# Generated by xtables-save v1.8.2 on Tue Jul 20 09:41:43 2021
*security
:INPUT ACCEPT [11977:856637]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [21635:6724355]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:FORWARD_direct - [0:0]
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
COMMIT
# Completed on Tue Jul 20 09:41:43 2021
# Generated by xtables-save v1.8.2 on Tue Jul 20 09:41:43 2021
*raw
:PREROUTING ACCEPT [13681:998123]
:OUTPUT ACCEPT [21635:6724355]
:PREROUTING_direct - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_ZONES - [0:0]
:OUTPUT_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_log - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_allow - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Tue Jul 20 09:41:43 2021
# Generated by xtables-save v1.8.2 on Tue Jul 20 09:41:43 2021
*mangle
:PREROUTING ACCEPT [13681:998123]
:INPUT ACCEPT [13681:998123]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [21635:6724355]
:POSTROUTING ACCEPT [22383:6780231]
:PREROUTING_direct - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_ZONES - [0:0]
:POSTROUTING_direct - [0:0]
:INPUT_direct - [0:0]
:OUTPUT_direct - [0:0]
:FORWARD_direct - [0:0]
:PRE_public - [0:0]
:PRE_public_log - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_allow - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A INPUT -j INPUT_direct
-A FORWARD -j FORWARD_direct
-A OUTPUT -j OUTPUT_direct
-A POSTROUTING -j POSTROUTING_direct
-A PREROUTING_ZONES -g PRE_public
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
COMMIT
# Completed on Tue Jul 20 09:41:43 2021
# Generated by xtables-save v1.8.2 on Tue Jul 20 09:41:43 2021
*nat
:PREROUTING ACCEPT [979:86814]
:INPUT ACCEPT [23:1204]
:POSTROUTING ACCEPT [4:233]
:OUTPUT ACCEPT [3141:224267]
:PREROUTING_direct - [0:0]
:PREROUTING_ZONES_SOURCE - [0:0]
:PREROUTING_ZONES - [0:0]
:POSTROUTING_direct - [0:0]
:POSTROUTING_ZONES_SOURCE - [0:0]
:POSTROUTING_ZONES - [0:0]
:OUTPUT_direct - [0:0]
:POST_public - [0:0]
:POST_public_log - [0:0]
:POST_public_deny - [0:0]
:POST_public_allow - [0:0]
:PRE_public - [0:0]
:PRE_public_log - [0:0]
:PRE_public_deny - [0:0]
:PRE_public_allow - [0:0]
:DOCKER - [0:0]
-A PREROUTING -j PREROUTING_direct
-A PREROUTING -j PREROUTING_ZONES_SOURCE
-A PREROUTING -j PREROUTING_ZONES
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
-A POSTROUTING -j POSTROUTING_direct
-A POSTROUTING -j POSTROUTING_ZONES_SOURCE
-A POSTROUTING -j POSTROUTING_ZONES
-A OUTPUT -j OUTPUT_direct
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A PREROUTING_ZONES -g PRE_public
-A POSTROUTING_ZONES -g POST_public
-A POST_public -j POST_public_log
-A POST_public -j POST_public_deny
-A POST_public -j POST_public_allow
-A POST_public_allow ! -o lo -j MASQUERADE
-A POST_public_allow ! -o lo -j MASQUERADE
-A PRE_public -j PRE_public_log
-A PRE_public -j PRE_public_deny
-A PRE_public -j PRE_public_allow
-A DOCKER -i docker0 -j RETURN
COMMIT
# Completed on Tue Jul 20 09:41:43 2021
